# reddit

./: .gitignore  LICENSE  README.md  pyproject.toml
deploy/: show-logs.sh  tools.py
deploy/services/: challonge.service  fastapi.service  ngrok.service
raspberry_pi/: cd.py  continuous_deployment.py  github_hook.py  set-services.sh  shutdown_notification.py
raspberry_pi/scripts/: copy-services.sh  show-logs.sh  start-services.sh
raspberry_pi/services/: ngrok.service  reddit.service
reddit/: fastapi.py  settings.py  utils.py  websocket.py
reddit/bots/: challonge.py  database.py
reddit/web/: github_hook.py  main.py  telegram_hook.py  webhook.py
tests/: test_reddit.py
